Fixed images being cropped, added route for characters page to be the root page

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,9 +95,9 @@ body {
 }
 
 img {
-  width:  200px;
+  width: 200px;
   height: 200px;
-  object-fit: cover;
+
 }
 
 img.center {
